<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.android.myappportfolio.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:fontFamily="sans-serif"
        android:text="@string/app_title"
        android:textSize="@dimen/title_size"
        android:textStyle="bold"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#c0c0c0"/>

    <Button
        style="@style/CodeFont"
            android:id="@+id/movieapp_button"
            android:text="@string/movie_app"
            android:fontFamily="sans-serif"/>


    <Button
            style="@style/CodeFont"
            android:text="@string/stock_app"
            android:id="@+id/stockhawk_button"
            android:fontFamily="sans-serif" />


    <Button
            style="@style/CodeFont"
            android:text="@string/buildbigger_app"
            android:id="@+id/buildbigger_button"
            android:fontFamily="sans-serif" />


    <Button
            style="@style/CodeFont"
            android:text="@string/materialdesign_app"
            android:id="@+id/materialdesign_button"
            android:fontFamily="sans-serif" />


    <Button
            style="@style/CodeFont"
            android:text="@string/ubiquitious_app"
            android:id="@+id/ubiquitious_button"
            android:fontFamily="sans-serif" />


    <Button
            style="@style/CodeFont"
            android:text="@string/capstone_app"
            android:id="@+id/capstone_button"
            android:fontFamily="sans-serif"/>


</LinearLayout>
</ScrollView>